--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 <header class="container">
@@ -24,7 +24,7 @@
     <div class="row text-center">
       <h2>I DON'T KNOW HTML OR CSS</h2>
       <h3>asdfasdfasdf</h3>
-      <a class="btn btn-primary" href="#" role="button">Not a button</a>
+      <a class="btn btn-primary" href="https://simenvg.github.io/sider/prosjekter/prosjekter.html" role="button">Projects</a>
     </div>
   </div>
 </section>
@@ -53,13 +53,8 @@
   
 <footer class="container">
   <div class="row">
-    <p class="col-sm-4">&copy; 2076 simenvg</p>
-    <ul class="col-sm-8">
-      <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></li>
-      <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></li>
-      <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg"></li>
-      <li class="col-sm-1"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg"></li>
-    </ul>
+    <p class="col-sm-4">simenvg</p>
+
   </div>
 </footer>
 </body>
