Random cell project js

--- a/sider/prosjekter/prosjekter.html
+++ b/sider/prosjekter/prosjekter.html
@@ -10,9 +10,9 @@
 <body>
 <header class="container">
   <div class="row">
-      <h1 class="col-sm-4">
-        <a href="https://simenvg.github.io" style="color: #000000"> simenvg.github.io </a> 
-      </h1>
+      <div class="col-sm-4">
+        <a class="button2" href="vg.no" role="button">simenvg.github.io</a>
+      </div>
     <nav class="col-sm-8 text-right">
       <p><a href="https://vg.no">Home</a></p>
       <p>Projects</p>
