--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <section class="jumbotron">
   <div class="container">
     <div class="row text-center">
-      <h2>I DON'T KNOW HTML OR CSS</h2>
-      <h3>asdfasdfasdf</h3>
+      <h2>HEI</h2>
+      <h3></h3>
       <a class="btn btn-primary" href="https://simenvg.github.io/sider/prosjekter/prosjekter.html" role="button">Projects</a>
     </div>
   </div>
