Maze generator DFS added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="row text-center">
       <h2>HEI</h2>
       <h3></h3>
-      <a class="btn btn-primary" href="https://simenvg.github.io/sider/prosjekter/prosjekter.html" role="button">Projects</a>
+      <a class="btn btn-primary" href="https://simenvg.github.io/sider/labyrint/labyrint.html" role="button">DFS maze</a>
     </div>
   </div>
 </section>
